# AweReader

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  make.sh
.cache/clangd/index/: global-variables.cpp.1B245297F3D504FC.idx  global-variables.hpp.A240807B7325B7E4.idx  load-file.cpp.3195332E9749979D.idx  main.cpp.C661BD6A689BBDF8.idx  main.hpp.5ED942B3BF826D79.idx  page-data.hpp.37AA5C7E2E6F2D57.idx  reader.cpp.74436C864D0EC980.idx  reader.hpp.71B183B66CA5AED7.idx
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake  deploy_reader_1e8ab9f929.cmake
scripts/: CMakeLists.txt  global-variables.cpp  global-variables.hpp  main.cpp  main.hpp
scripts/reader/: load-file.cpp  page-data.cpp  page-data.hpp  reader.cpp  reader.hpp  ui.cpp
